2008-08-31  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/stmt.c: disable DYNAMIC_FETCH to fetch
	    LONG or LONG RAW columns. It doesn't work well.
	* lib/oci8/metadata.rb: define char_size for Oracle 8i.
	* lib/oci8/oci8.rb: define OCI8::BindType::Long and
	    OCI8::BindType::LongRaw as subclasses of OCI8::BindType::String
	    and OCI8::BindType::RAW respectively. fix
	    OCI8::BindType::String.create and OCI8::BindType::RAW.create
	    for strings longer than 4000.
	* test/test_array_dml.rb: add workaround of "ORA-01036: illegal
	    variable name/number" by renaming a bind variable name ":N"
	    to ":1". I guess this is a problem in the Oracle library.
	* test/test_break.rb, test/test_dbi.rb, test/test_metadata.rb:
	    fix test codes for Oracle 8i or lower.
	* test/test_oci8.rb: revise a test for LONG columns.

2008-08-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml: OCINumberSign is unavailable on Oracle 8.
	* lib/DBD/OCI8/OCI8.rb: A data dictionary all_constraints doesn't have
	    index_name column on Oracle 8i or lower. Rewrite
	    DBI::DBD::OCI8::Database#column by using all_cons_columns.
	* lib/oci8/metadata.rb: raise an error when using 
	* test/config.rb: Oracle 8 desn't have database_compatible_level data
	    dictionary.
	* test/test_metadata.rb: fix test codes for Oracle 8i or lower.

2008-08-26  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: fix bugs when trying to use already freed
	    OCI8::Metadata::*.
	* ext/oci8/ocidatetime.c: fix OCI8::BindType::OCIDate#set().
	* ext/oci8/ocinumber.c: undef OraNumber#round_prec and OraNumber
	    #shift when using Oracle 8.0.
	* lib/oci8/datetime.rb, lib/oci8/metadata.rb: fix bugs when using
	    Oracle 8.0.
	* test/config.rb, test/test_dbi.rb, test/test_metadata.rb,
	  test/test_oci8.rb, test/test_oranumber.rb: do same with the
	    previous commit.
	* test/test_datetime.rb: disable some test cases when Oracle 8.1
	    or lower.