@@ -701,7 +701,7 @@ OCI8::BindType::Mapping[:bfile] = OCI8::BindType::BFILE
 # DATE          SQLT_DAT      7    0    0
 OCI8::BindType::Mapping[:date] = OCI8::BindType::Time
 
-if OCI8.oracle_client_version >= OCI8::ORAVER_9_1
+if OCI8.oracle_client_version >= OCI8::ORAVER_9_0
   OCI8::BindType::Mapping[:timestamp] = OCI8::BindType::Time
   OCI8::BindType::Mapping[:timestamp_tz] = OCI8::BindType::DateTime
   OCI8::BindType::Mapping[:timestamp_ltz] = OCI8::BindType::Time
