@@ -71,7 +71,7 @@ EOS
   end
 
   def test_timestamp_select
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     ['2005-12-31 23:59:59.999999000',
      '2006-01-01 00:00:00.000000000'].each do |date|
@@ -84,7 +84,7 @@ EOS
   end
 
   def test_timestamp_out_bind
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     cursor = @conn.parse(<<-EOS)
 BEGIN
@@ -103,7 +103,7 @@ EOS
   end
 
   def test_timestamp_in_bind
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     cursor = @conn.parse(<<-EOS)
 BEGIN
@@ -122,7 +122,7 @@ EOS
   end
 
   def test_timestamp_tz_select
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     ['2005-12-31 23:59:59.999999000 +08:30',
      '2006-01-01 00:00:00.000000000 -08:30'].each do |date|
@@ -135,7 +135,7 @@ EOS
   end
 
   def test_timestamp_tz_out_bind
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     cursor = @conn.parse(<<-EOS)
 BEGIN
@@ -154,7 +154,7 @@ EOS
   end
 
   def test_timestamp_tz_in_bind
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     cursor = @conn.parse(<<-EOS)
 BEGIN
@@ -227,7 +227,7 @@ EOS
   end
 
   def test_interval_ym_select
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     [['2006-01-01', '2004-03-01'],
      ['2006-01-01', '2005-03-01'],
@@ -245,7 +245,7 @@ EOS
   end
 
   def test_interval_ym_out_bind
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     cursor = @conn.parse(<<-EOS)
 DECLARE
@@ -274,7 +274,7 @@ EOS
   end
 
   def test_interval_ym_in_bind
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     cursor = @conn.parse(<<-EOS)
 DECLARE
@@ -301,7 +301,7 @@ EOS
   end
 
   def test_interval_ds_select
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     [['2006-01-01', '2004-03-01'],
      ['2006-01-01', '2005-03-01'],
@@ -329,7 +329,7 @@ EOS
   end
 
   def test_interval_ds_out_bind
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     cursor = @conn.parse(<<-EOS)
 DECLARE
@@ -368,7 +368,7 @@ EOS
   end
 
   def test_interval_ds_in_bind
-    return if $oracle_version < OCI8::ORAVER_9_1
+    return if $oracle_version < OCI8::ORAVER_9_0
 
     cursor = @conn.parse(<<-EOS)
 DECLARE
